--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 <li><a href="#intro">Intro</a></li>
                 <li><a href="#aboutme">Aboutme</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <!-- <li><a href="#other">Other</a></li> -->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -82,9 +81,9 @@
                             </div>
                             <div class="por-text">
                                 <h1>착한구두</h1>
-                                <p>web 접근성에 맞게 제작 되었습니다</p>
-                                <p>web 접근성에 맞게 제작 되었습니다</p>
-                                <p>web 접근성에 맞게 제작 되었습니다</p>
+                                <p>접근성에 맞게 제작 되었습니다</p>
+                                <p>접근성에 맞게 제작 되었습니다</p>
+                                <p>접근성에 맞게 제작 되었습니다</p>
                             </div>
                         </div>
                     </div>
@@ -93,9 +92,9 @@
                             <div class="por-image"><a href="#"><img src="image/b02.jpg"></a></div>
                             <div class="por-text">
                                 <h1>THE ZAM</h1>
-                                <p>web 접근성에 맞게 제작 되었습니다</p>
-                                <p>web 접근성에 맞게 제작 되었습니다</p>
-                                <p>web 접근성에 맞게 제작 되었습니다</p>
+                                <p>접근성에 맞게 제작 되었습니다</p>
+                                <p>접근성에 맞게 제작 되었습니다</p>
+                                <p>접근성에 맞게 제작 되었습니다</p>
                             </div>
                         </div>
                     </div>
@@ -104,9 +103,9 @@
                             <div class="por-image"><a href="#"><img src="image/b05.png"></a></div>
                             <div class="por-text">
                                 <h1>CINNAMON</h1>
-                                <p>web 접근성에 맞게 제작 되었습니다</p>
-                                <p>web 접근성에 맞게 제작 되었습니다</p>
-                                <p>web 접근성에 맞게 제작 되었습니다</p>
+                                <p>접근성에 맞게 제작 되었습니다</p>
+                                <p>접근성에 맞게 제작 되었습니다</p>
+                                <p>접근성에 맞게 제작 되었습니다</p>
                             </div>
                         </div>
                     </div>
@@ -116,7 +115,13 @@
         <section class="contact-section">
             <div id="contact">
                 <div class="contact-container">
-                    <div class="contact-wrapper"></div>
+                    <div class="contact-wrapper">
+                        <div class="contact-text">
+                            <h1>THANK YOU FOR VISITING</h1>
+                            <p>phone:010.7297.1138</p>
+                            <p>mail:raain@naver.com</p>
+                        </div>
+                    </div>
                 </div>
         </section>
     </article>
