--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="http://bdmp-003.cafe24.com/bizdemo40925/img/images/hero-img/slide1.jpg">
+                            <img src="http://bdmp-003.cafe24.com/bizdemo40925/img/images/hero-img/slide2.jpg">           
                         </div>
                         <div class="swiper-slide">
                             <img src="image/bg03.jpg">
                         </div>
                         <div class="swiper-slide">
-                            <img src="http://bdmp-003.cafe24.com/bizdemo40925/img/images/hero-img/slide2.jpg">
+                            <img src="http://bdmp-003.cafe24.com/bizdemo40925/img/images/hero-img/slide1.jpg">
                         </div>
                     </div>
                     <!-- Add Pagination -->
@@ -53,17 +53,51 @@
             <div id="aboutme">
                 <div class="aboutme-container">
                     <div class="aboutme-wrapper">
-                        <h1 class="about-text">ABOUT ME</h1>
+                        <h1 class="about-text">About Me</h1>
                         <div class="aboutme-img">
                             <img src="image/09.png">
                             <p class="typing"></p>
                         </div>
                         <div class="aboutme-text">
-                            <p><strong class="text">GROWTH</strong>다양한 경험을 통하여 성장하는 사람입니다</p>
-                            <p><strong class="text">THE DEPTH OF One's life</strong>인내와 노력을 통하여 삶의 깊이를 통찰합니다 </p>
-                            <p><strong class="text">DON't give up</strong> 그것은 나를 더 발전시키는 밑거름이 됩니다</p>
-                            <p><strong class="text">THE BEST RESULT</strong> 포기하지 않는 열정은 최선의 결과로 이어집니다 </p>
+                            <p><strong class="text">Name,Brith</strong>조화음 89.01.02</p>
+                            <p><strong class="text">Call</strong>010.7297.1138</p>
+                            <p><strong class="text">Mail</strong>raain@naver.com </p>
+                            <p><strong class="text">Education</strong> 2020-2021Hanul Vocational School UXUI </p>
+                            <p><strong class="text">Certificate</strong>워드프로세서1급 문서실무사1급 실내건축기능사 공인중개사 </p>
                             <div>
+                            </div>
+                        </div>
+                        <div class="skill_box">
+                            <h1>Skill</h1>
+                            <div class='flx'>
+                                <div class="flx-item">
+                                    <svg class="circle-progress" viewBox="0 0 36 36">
+                                        <path class='circle-path' d="M18 2a16 16 0 010 32 16 16 0 010-32"
+                                            stroke-dasharray="80, 100"></path>
+                                        <text class='circle-text' x="50%" y="50%">HTML75%</text>
+                                    </svg>
+                                </div>
+                                <div class="flx-item">
+                                    <svg class="circle-progress" viewBox="0 0 36 36">
+                                        <path class='circle-path' d="M18 2a16 16 0 010 32 16 16 0 010-32"
+                                            stroke-dasharray="75, 100"></path>
+                                        <text class='circle-text' x="50%" y="50%">CSS75%</text>
+                                    </svg>
+                                </div>
+                                <div class="flx-item">
+                                    <svg class="circle-progress" viewBox="0 0 36 36">
+                                        <path class='circle-path' d="M18 2a16 16 0 010 32 16 16 0 010-32"
+                                            stroke-dasharray="70, 100"></path>
+                                        <text class='circle-text' x="50%" y="50%">PS70%</text>
+                                    </svg>
+                                </div>
+                                <div class="flx-item">
+                                    <svg class="circle-progress" viewBox="0 0 36 36">
+                                        <path class='circle-path' d="M18 2a16 16 0 010 32 16 16 0 010-32"
+                                            stroke-dasharray="70, 100"></path>
+                                        <text class='circle-text' x="50%" y="50%">AI70%</text>
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -73,14 +107,14 @@
         <section class="Portfolio-section">
             <div id="portfolio">
                 <div class="Portfolio-container">
-                    <h1 class="portfolio-text">WEB PUBLISHING</h1>
+                    <h1 class="portfolio-text">Web Publishing</h1>
                     <div data-aos="zoom-in">
                         <div class="Portfolio-wrapper">
                             <div class="por-image">
-                                <a href="#"><img src="image/c02.png"></a>
+                                <a href="#"><img src="image/b03.jpg"></a>
                             </div>
                             <div class="por-text">
-                                <h1>착한구두</h1>
+                                <h1>Cosmetic</h1>
                                 <p>접근성에 맞게 제작 되었습니다</p>
                                 <p>접근성에 맞게 제작 되었습니다</p>
                                 <p>접근성에 맞게 제작 되었습니다</p>
@@ -91,7 +125,7 @@
                         <div class="Portfolio-wrapper">
                             <div class="por-image"><a href="#"><img src="image/b02.jpg"></a></div>
                             <div class="por-text">
-                                <h1>THE ZAM</h1>
+                                <h1>The Zam</h1>
                                 <p>접근성에 맞게 제작 되었습니다</p>
                                 <p>접근성에 맞게 제작 되었습니다</p>
                                 <p>접근성에 맞게 제작 되었습니다</p>
@@ -100,9 +134,9 @@
                     </div>
                     <div data-aos="zoom-in">
                         <div class="Portfolio-wrapper">
-                            <div class="por-image"><a href="#"><img src="image/b05.png"></a></div>
+                            <div class="por-image"><a href="#"><img src="image/b04.png"></a></div>
                             <div class="por-text">
-                                <h1>CINNAMON</h1>
+                                <h1>Ellen</h1>
                                 <p>접근성에 맞게 제작 되었습니다</p>
                                 <p>접근성에 맞게 제작 되었습니다</p>
                                 <p>접근성에 맞게 제작 되었습니다</p>
@@ -117,7 +151,7 @@
                 <div class="contact-container">
                     <div class="contact-wrapper">
                         <div class="contact-text">
-                            <h1>THANK YOU FOR VISITING</h1>
+                            <h1>Thank You, Contact Here</h1>
                             <p>phone:010.7297.1138</p>
                             <p>mail:raain@naver.com</p>
                         </div>
@@ -145,7 +179,7 @@
         var tag = document.querySelector(".typing");
         var app = new Hakademy.util.typing(tag, {
             text: [
-                "cho hwa eum",
+                "DO My Best!",
             ],
             color: {
                 list: true
